Genex: $<HOST_LINK:> and $<DEVICE_LINK:> must be usable in try_compile

Fixes: #22007